--- a/home.css
+++ b/home.css
@@ -175,6 +175,14 @@ transform: rotate3d(1,0,0,70deg);
  opacity: 0.6;
 }
 
+@media only screen and (max-width:600px) {
+  .container{
+    width: 25vh;
+  height: 45vh;
+  }
+  
+}
+
 @keyframes rotatePlanet {
       from {
         background-position: 0 0;
