--- a/home.css
+++ b/home.css
@@ -177,8 +177,14 @@ transform: rotate3d(1,0,0,70deg);
 
 @media only screen and (max-width:600px) {
   .container{
-    width: 25vh;
+    width: 35vh;
   height: 45vh;
+  }
+  .planet_ctn{
+    width: 30vw;
+ height: 30vw;
+ top:10vh;
+ left: 68vw;
   }
   
 }
