--- a/home.css
+++ b/home.css
@@ -15,27 +15,38 @@ section{
   max-width: 100vw;
   height: 100vh;
 }
-
+.box_ctn{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .container{
   position: absolute;
   top: 25vh;
   bottom: 25vh;
   right: 25vw;
   left: 25vw;
-  margin: 50px;
+
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 30vw;
-  height: 45vh;
+  width: 40vw;
+  height: 50vh;
   background-image: url('purple_texture.jpg');
  background-size: cover;
  background-position: center;
  border: solid;
   border-radius: 5vh;
   z-index: 100;
-  animation: fly 4s linear forwards,
-             float-around 6s 4s ease infinite;
+  animation: fly 3.5s ease forwards,
+             float-around 6s 3.5s ease infinite;
 
 }
 
@@ -77,8 +88,8 @@ section{
 
 .planet{
       position: relative;
-      width: 10vw;
-      height: 10vw;
+      width: 66%;
+      height: 66%;
       border-radius: 50%;
       background-image: url('purple_texture2.jpg');
       background-size: cover;
@@ -87,22 +98,22 @@ section{
       box-shadow: inset -20px 0 60px rgba(0, 0, 0, 0.4);
       filter: drop-shadow(2px 2px 20px #A020F0);
       z-index: 0;
-      opacity: 0.9;
+      
     }
   
 .up{
       position: absolute;
       top: 15%;
-      width: 10vw;
-      height: 5vw;
-      border-radius: 5vw 5vw 0 0;
+      width: 66%;
+      height: 38%;
+      border-top-left-radius: 50% 100%;
+      border-top-right-radius: 50% 100%;
       background-image: url('purple_texture2.jpg');
       background-size: cover;
       background-position: center;
       animation: rotatePlanet 30s linear infinite;
       overflow: hidden;
       z-index: 2;
-      opacity: 0.9;
     }
 .planet_ctn{
 position: relative;
@@ -130,8 +141,6 @@ width: 15vw;
   border-radius: 50%;
   top: -1.0vw;
   z-index: 1;
-box-shadow: inset -20px 0 60px rgba(0, 0, 0, 0.4);
-      filter: drop-shadow(2px 2px 20px #A020F0);
       transform: rotate3d(1,0,0,70deg);
 
 }
@@ -148,8 +157,7 @@ box-shadow: inset -20px 0 60px rgba(0, 0, 0, 0.4);
   width: 110%;
   border-radius: 50%;
   top: -1.75vw;
-  box-shadow: inset -20px 0 60px rgba(0, 0, 0, 0.4);
-      filter: drop-shadow(2px 2px 20px #A020F0);
+
 transform: rotate3d(1,0,0,70deg);
   z-index: 1;
 
@@ -169,32 +177,23 @@ transform: rotate3d(1,0,0,70deg);
   border-radius: 50%;
   top: -2.55vw;
   z-index: 1;
-  box-shadow: inset -20px 0 60px rgba(0, 0, 0, 0.4);
+
       filter: drop-shadow(2px 2px 20px #A020F0);
+  
       transform: rotate3d(1,0,0,70deg);
  opacity: 0.6;
 }
 
 @media only screen and (max-width:600px) {
   .container{
-    width: 35vh;
+    width: 45vh;
   height: 45vh;
-  }
+}
   .planet_ctn{
-    width: 20vw;
- height: 20vw;
  top:10vh;
- left: 68vw;
+ left: 75vw;
   }
-  .planet{
-    width: 15vw;
-    height: 15vw;
-  }
-  .up{
-    width: 15vw;
-    height: 10vw;
-    border-radius: 10vw 10vw 0 0;
-  }
+
   
 }
 
@@ -232,17 +231,17 @@ transform: rotate3d(1,0,0,70deg);
     transform: translateY(-25vh);
   }
   100%{
-    transform: translateY(0vh);
+    transform: translateY(5vh);
   }
 }
 @keyframes float-around{
   0%{
-    transform: translateY(0vh);
+    transform: translateY(5vh);
   }
   50%{
-    transform: translateY(-5vh);
+    transform: translateY(0vh);
   }
   100%{
-    transform: translateY(0vh);
+    transform: translateY(5vh);
   }
 }
