--- a/home.css
+++ b/home.css
@@ -21,23 +21,18 @@ section{
   bottom: 0;
   left: 0;
   right: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .container{
   position: absolute;
-  top: 25vh;
-  bottom: 25vh;
-  right: 25vw;
-  left: 25vw;
-
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 40vw;
+  width: 35vw;
   height: 50vh;
   background-image: url('purple_texture.jpg');
  background-size: cover;
@@ -120,8 +115,8 @@ position: relative;
 display: flex;
 align-items: center;
 justify-content: center;
-top:15vh;
-left: 75vw;
+top:10vh;
+left: 78vw;
 width: 15vw;
  height: 15vw;
  perspective: 18vw;
@@ -184,7 +179,7 @@ transform: rotate3d(1,0,0,70deg);
  opacity: 0.6;
 }
 
-@media only screen and (max-width:600px) {
+@media (max-width:600px) {
   .container{
     width: 45vh;
   height: 45vh;
@@ -193,8 +188,6 @@ transform: rotate3d(1,0,0,70deg);
  top:10vh;
  left: 75vw;
   }
-
-  
 }
 
 @keyframes rotatePlanet {
