--- a/home.css
+++ b/home.css
@@ -62,6 +62,10 @@ section{
   height: 20%;
   margin-bottom: 10px;
 }
+.btn{
+    color: black;
+    border: none;
+  }
 .blueBTN{
   width: 50%;
   height: 100%;
@@ -188,6 +192,14 @@ transform: rotate3d(1,0,0,70deg);
  top:10vh;
  left: 75vw;
   }
+  .btn{
+    color: black;
+    border: none;
+    font-size: 100%;
+    text-decoration: none;
+    
+  }
+  
 }
 
 @keyframes rotatePlanet {
